Bryans firts changes